syntax = "proto3";

package chat;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package="github.com/eastnine90/go-chat-demo/protos";

service Chat {
    rpc GetList(google.protobuf.Empty) returns (ChatRoomsResponse) {}
    rpc EnterOrCreate(ChatRoomRequest) returns (stream ChatStreamResponse) {}
    rpc SendChat(stream ChatMessage) returns (google.protobuf.Empty) {}
}

message ChatRoomsResponse {
    map<string, ChatRoom> chat_rooms = 1;
    message ChatRoom {
        string name = 1;
        map<string, bool> users = 2;
    }
}


message ChatRoomRequest {
    string chat_room_name = 1;
    string user_id = 2;
}

message ChatMessage {
    string uuid = 1;
    string name = 2;
    string message = 3;
}

message ChatStreamResponse {
    google.protobuf.Timestamp timestamp = 1;
    ChatMessage chat_message =2;
}